add: README 템플릿 추가

--- a/startup-agent.ipynb
+++ b/startup-agent.ipynb
@@ -10,6 +10,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe040a4a",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "18f5714d",
@@ -91,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "2cde67ed",
    "metadata": {},
    "outputs": [],
@@ -116,19 +122,29 @@
    },
    "source": [
     "\n",
-    "## 스타트업 탐색 에이전트 (현준)\n",
+    "## 스타트업 탐색 에이전트 (담당자: 현준)\n",
     "1. 웹서치로 스타트업 기본 정보 수집\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "93d8a942",
    "metadata": {},
    "outputs": [],
    "source": [
     "def startup_search_agent(state: AgentState) -> AgentState:\n",
     "    # TODO: web_search 또는 web_fetch로 스타트업 정보 수집\n",
+    "    # 예시: results = web_search(\"small satellite startup 2024\")\n",
+    "\n",
+    "    # 수집한 정보를 state에 저장\n",
+    "    state[\"startup_name\"] = \"Example Satellite Startup\"\n",
+    "    state[\"startup_info\"] = {\n",
+    "        \"description\": \"소형 위성 기반 지구 관측 서비스\",\n",
+    "        \"founding_year\": 2020,\n",
+    "        \"technology\": \"CubeSat, 광학위성\",\n",
+    "        \"website\": \"https://example.com\",\n",
+    "    }\n",
     "\n",
     "    return state"
    ]
@@ -138,7 +154,7 @@
    "id": "83c6e19c",
    "metadata": {},
    "source": [
-    "## 기술 요약 에이전트 (승연)"
+    "## 기술 요약 에이전트 (담당자: 승연)"
    ]
   },
   {
@@ -149,10 +165,10 @@
    "outputs": [],
    "source": [
     "def tech_summary_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"\n",
-    "    스타트업의 기술력 핵심 요약\n",
-    "    - RAG: 홈페이지, 논문에서 핵심 기술 추출\n",
-    "    \"\"\"\n",
+    "    \"\"\"승연 담당: 기술력 핵심 요약\"\"\"\n",
+    "\n",
+    "    state[\"tech_summary\"] = f\"{company_name}의 기술 분석 결과 (승연 담당)\"\n",
+    "\n",
     "    return state"
    ]
   },
@@ -166,39 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f2d999b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def market_eval_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"\n",
-    "    시장 성장성, 수요 분석\n",
-    "    - RAG: 시장 리포트, 산업뉴스 검색\n",
-    "    \"\"\"\n",
-    "    return state"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4e37267",
-   "metadata": {},
-   "source": [
-    "## 유명 투자자 지식 기반 가치 요약 에이전트"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e419c288",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def investment_decision_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"\n",
-    "    유명 투자자 지식 기반 가치 요약 에이전트\n",
-    "    - Scorecard Method 적용\n",
-    "    \"\"\"\n",
+    "    \"\"\"민주 담당: 시장 성장성, 수요 분석\"\"\"\n",
+    "\n",
+    "    company_name = state[\"startup_name\"]\n",
+    "    state[\"market_analysis\"] = f\"{company_name}의 시장 분석 결과 (민주 담당)\"\n",
     "\n",
     "    return state"
    ]
@@ -208,7 +201,7 @@
    "id": "b2bfdc75",
    "metadata": {},
    "source": [
-    "## 투자 판단 에이전트"
+    "## 투자 판단 에이전트\n"
    ]
   },
   {
@@ -219,11 +212,7 @@
    "outputs": [],
    "source": [
     "def investment_decision_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"\n",
-    "    종합 판단 (리스크, ROI 등)\n",
-    "    - Scorecard Method 적용\n",
-    "    \"\"\"\n",
-    "    print(\"=== [경남] 투자 판단 에이전트 실행 ===\")\n",
+    "    \"\"\"경남 담당: 투자자 인사이트 분석 + Scorecard Method 기반 투자 판단\"\"\"\n",
     "\n",
     "    company_name = state[\"startup_name\"]\n",
     "    tech_summary = state[\"tech_summary\"]\n",
@@ -231,34 +220,46 @@
     "\n",
     "    llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
     "\n",
-    "    evaluation_prompt = f\"\"\"\n",
-    "    다음 정보를 바탕으로 Scorecard Method로 투자를 평가하세요:\n",
+    "    combined_prompt = f\"\"\"\n",
+    "    당신은 세계적인 벤처캐피탈리스트입니다.\n",
     "    \n",
     "    회사: {company_name}\n",
+    "    기술 분석: {tech_summary}\n",
+    "    시장 분석: {market_analysis}\n",
     "    \n",
-    "    기술 분석:\n",
-    "    {tech_summary}\n",
+    "    ## Part 1: 투자자 인사이트\n",
+    "    다음 관점에서 분석하세요:\n",
+    "    1. 비전과 시장 타이밍\n",
+    "    2. 팀의 실행력 가능성\n",
+    "    3. 스케일업 잠재력\n",
+    "    4. 경쟁 우위 지속가능성\n",
     "    \n",
-    "    시장 분석:\n",
-    "    {market_analysis}\n",
-    "    \n",
-    "    평가 기준:\n",
+    "    ## Part 2: Scorecard Method 평가\n",
+    "    각 항목을 50-150% 척도로 평가:\n",
     "    - 제품/기술: 15-20%\n",
     "    - 시장 기회: 20-25%\n",
-    "    \n",
-    "    각 항목을 50-150% 척도로 평가하고, \n",
-    "    \"invest\" 또는 \"hold\" 중 하나를 결정하세요.\n",
+    "    - 팀: 25-30%\n",
+    "    - 경쟁환경: 10-15%\n",
     "    \n",
     "    형식:\n",
-    "    기술 점수: X%\n",
-    "    시장 점수: Y%\n",
-    "    결론: invest/hold\n",
+    "    [투자자 인사이트]\n",
+    "    - 비전과 타이밍: ...\n",
+    "    - 실행력: ...\n",
+    "    - 스케일업: ...\n",
+    "    - 경쟁우위: ...\n",
+    "    \n",
+    "    [Scorecard 평가]\n",
+    "    기술: X%\n",
+    "    시장: Y%\n",
+    "    팀: Z%\n",
+    "    경쟁: W%\n",
+    "    \n",
+    "    [최종 결론]\n",
+    "    invest 또는 hold\n",
     "    \"\"\"\n",
     "\n",
-    "    result = llm.invoke(evaluation_prompt)\n",
+    "    result = llm.invoke(combined_prompt)\n",
     "    evaluation_text = result.content\n",
-    "\n",
-    "    print(f\"평가 결과:\\n{evaluation_text}\")\n",
     "\n",
     "    if \"invest\" in evaluation_text.lower() and \"hold\" not in evaluation_text.lower():\n",
     "        state[\"investment_decision\"] = \"invest\"\n",
@@ -267,12 +268,12 @@
     "\n",
     "    state[\"iteration_count\"] = state.get(\"iteration_count\", 0) + 1\n",
     "\n",
-    "    print(f\"투자 판단: {state['investment_decision']}\")\n",
     "    return state\n",
     "\n",
     "\n",
+    "# %%\n",
     "def should_continue(state: AgentState) -> str:\n",
-    "    \"\"\"조건 분기: 투자 추천이면 report_writer, 보류면 startup_search\"\"\"\n",
+    "    \"\"\"조건 분기\"\"\"\n",
     "    if state[\"investment_decision\"] == \"invest\":\n",
     "        return \"report_writer\"\n",
     "    elif state[\"iteration_count\"] >= 3:\n",
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "f560b93d",
    "metadata": {},
    "outputs": [],
@@ -381,31 +382,24 @@
     "def create_workflow():\n",
     "    graph = StateGraph(AgentState)\n",
     "\n",
-    "    # 노드 추가\n",
-    "    graph.add_node(\"startup_search\", startup_search_agent)  # 현준\n",
-    "    graph.add_node(\"tech_summary\", tech_summary_agent)  # 승연\n",
-    "    graph.add_node(\"market_eval\", market_eval_agent)  # 민주\n",
-    "    graph.add_node(\"investor_insight\", investor_insight_agent)  # 경남\n",
-    "    graph.add_node(\"investment_decision\", investment_decision_agent)  # 경남\n",
+    "    graph.add_node(\"startup_search\", startup_search_agent)\n",
+    "    graph.add_node(\"tech_summary\", tech_summary_agent)\n",
+    "    graph.add_node(\"market_eval\", market_eval_agent)\n",
+    "    graph.add_node(\"investment_decision\", investment_decision_agent)\n",
     "    graph.add_node(\"report_writer\", report_writer_agent)\n",
     "\n",
-    "    # 시작점\n",
     "    graph.set_entry_point(\"startup_search\")\n",
     "\n",
-    "    # Edge 연결\n",
     "    graph.add_edge(\"startup_search\", \"tech_summary\")\n",
     "    graph.add_edge(\"tech_summary\", \"market_eval\")\n",
-    "    graph.add_edge(\"market_eval\", \"investor_insight\")\n",
-    "    graph.add_edge(\"investor_insight\", \"investment_decision\")\n",
+    "    graph.add_edge(\"market_eval\", \"investment_decision\")\n",
     "\n",
-    "    # 조건부 Edge (Reflection)\n",
     "    graph.add_conditional_edges(\n",
     "        \"investment_decision\",\n",
     "        should_continue,\n",
     "        {\"report_writer\": \"report_writer\", \"startup_search\": \"startup_search\"},\n",
     "    )\n",
     "\n",
-    "    # 종료점\n",
     "    graph.set_finish_point(\"report_writer\")\n",
     "\n",
     "    return graph.compile()"
