시장성 평가 agent 작성

--- a/startup-agent.ipynb
+++ b/startup-agent.ipynb
@@ -122,22 +122,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "93d8a942",
    "metadata": {},
    "outputs": [],
    "source": [
     "def startup_search_agent(state: AgentState) -> AgentState:\n",
-    "    # TODO: web_search 또는 web_fetch로 스타트업 정보 수집\n",
-    "    # 예시: results = web_search(\"small satellite startup 2024\")\n",
+    "    \"\"\"\n",
+    "    스타트업 정보를 수집(또는 하드코딩)하여 state에 저장하는 함수\n",
+    "    \"\"\"\n",
+    "    # 스타트업 이름\n",
+    "    state[\"startup_name\"] = \"Starlink\"\n",
     "\n",
-    "    # 수집한 정보를 state에 저장\n",
-    "    state[\"startup_name\"] = \"Example Satellite Startup\"\n",
+    "    # 상세 정보 (dict 형태)\n",
     "    state[\"startup_info\"] = {\n",
-    "        \"description\": \"소형 위성 기반 지구 관측 서비스\",\n",
-    "        \"founding_year\": 2020,\n",
-    "        \"technology\": \"CubeSat, 광학위성\",\n",
-    "        \"website\": \"https://example.com\",\n",
+    "        \"website\": \"https://www.starlink.com\",\n",
+    "        \"tech_focus\": \"저궤도 위성\",\n",
+    "        \"description\": (\n",
+    "            \"Starlink는 LEO 위성 시장에서 가장 큰 플레이어로, \"\n",
+    "            \"7,000개 이상의 활성 위성을 운영하고 있습니다. \"\n",
+    "            \"이들은 전 세계에 고속 인터넷 서비스를 제공하는 데 중점을 두고 있습니다.\"\n",
+    "        ),\n",
+    "        \"founded_year\": 2018,\n",
+    "        \"location\": \"미국\",\n",
+    "        \"funding\": \"비공식적이며, 수십억 달러의 투자 유치\",\n",
     "    }\n",
     "\n",
     "    return state"
@@ -181,13 +189,280 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "from typing import Dict, Any, List\n",
+    "import os, json, re\n",
+    "from datetime import datetime\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.documents import Document\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# 점수 가중치 정의 (총 100점 기준)\n",
+    "# ----------------------------------------------------------\n",
+    "# market_size: 시장규모(크기·확장성)\n",
+    "# growth: 성장률(산업 성장 속도)\n",
+    "# demand_signals: 수요 신호(정부/민간 수요)\n",
+    "# entry_barriers: 진입장벽(낮을수록 좋음)\n",
+    "# policy_budget_tailwind: 정책/예산 순풍(정부 지원 강도)\n",
+    "# competition_intensity: 경쟁 강도(낮을수록 좋음)\n",
+    "# gtm_feasibility: 시장 진입(GTM) 용이성\n",
+    "# ==========================================================\n",
+    "WEIGHTS: Dict[str, int] = {\n",
+    "    \"market_size\": 20,\n",
+    "    \"growth\": 15,\n",
+    "    \"demand_signals\": 15,\n",
+    "    \"entry_barriers\": 10,\n",
+    "    \"policy_budget_tailwind\": 15,\n",
+    "    \"competition_intensity\": 10,\n",
+    "    \"gtm_feasibility\": 15,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# 점수 계산 함수\n",
+    "# ----------------------------------------------------------\n",
+    "# - 누락 시 기본 55점\n",
+    "# - 진입장벽(entry_barriers)·경쟁강도(competition_intensity)는\n",
+    "#   낮을수록 유리하므로 100 - 점수로 반전\n",
+    "# ==========================================================\n",
+    "def _total_score(scores: Dict[str, float]) -> float:\n",
+    "    adj = {k: float(scores.get(k, 55)) for k in WEIGHTS}\n",
+    "    adj[\"entry_barriers\"] = 100 - adj[\"entry_barriers\"]\n",
+    "    adj[\"competition_intensity\"] = 100 - adj[\"competition_intensity\"]\n",
+    "    return round(sum(adj[k] * WEIGHTS[k] / 100 for k in WEIGHTS), 1)\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# 밴드(Band) 정의\n",
+    "# ----------------------------------------------------------\n",
+    "# - Invest (≥80): 투자 유망\n",
+    "# - Watch (60~79): 긍정적이나 추세 관찰 필요\n",
+    "# - Hold (<60): 리스크 높아 보류\n",
+    "# ==========================================================\n",
+    "def _band(total: float) -> str:\n",
+    "    if total >= 80:\n",
+    "        return \"Invest\"\n",
+    "    elif total >= 60:\n",
+    "        return \"Watch\"\n",
+    "    return \"Hold\"\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# Retriever (RAG 검색기) 생성\n",
+    "# ----------------------------------------------------------\n",
+    "# - PDF: 2024년 우주산업실태조사 보고서, 우주청 2025년 예산 편성안\n",
+    "# - HuggingFace 임베딩 + FAISS 벡터 검색 기반\n",
+    "# ==========================================================\n",
+    "_RETRIEVER = None\n",
+    "\n",
+    "\n",
+    "def _ensure_retriever(k: int = 8):\n",
+    "    global _RETRIEVER\n",
+    "    if _RETRIEVER is not None:\n",
+    "        return _RETRIEVER\n",
+    "\n",
+    "    pdf_paths = [\n",
+    "        \"data/2024년 우주산업실태조사 보고서(최종본).pdf\",\n",
+    "        \"data/우주청_2025년_예산_편성안.pdf\",\n",
+    "    ]\n",
+    "\n",
+    "    splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=150)\n",
+    "    docs_all = []\n",
+    "\n",
+    "    for p in pdf_paths:\n",
+    "        if not os.path.exists(p):\n",
+    "            raise FileNotFoundError(f\"PDF 파일이 존재하지 않습니다: {p}\")\n",
+    "        loader = PyPDFLoader(p)\n",
+    "        pages = loader.load()\n",
+    "        for d in pages:\n",
+    "            d.metadata[\"source\"] = Path(p).name\n",
+    "        docs_all.extend(splitter.split_documents(pages))\n",
+    "\n",
+    "    embeddings = HuggingFaceEmbeddings(\n",
+    "        model_name=\"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "    )\n",
+    "    vectordb = FAISS.from_documents(docs_all, embeddings)\n",
+    "    _RETRIEVER = vectordb.as_retriever(search_kwargs={\"k\": k})\n",
+    "    return _RETRIEVER\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# 컨텍스트 수집 (RAG)\n",
+    "# ----------------------------------------------------------\n",
+    "# - LLM이 참고할 문맥을 PDF에서 자동으로 검색\n",
+    "# - 시장 규모, 예산, 수요, 경쟁 등 4개 축으로 질의 수행\n",
+    "# ==========================================================\n",
+    "def _gather_context(target: str, topk_each: int = 6) -> str:\n",
+    "    retriever = _ensure_retriever()\n",
+    "    queries = [\n",
+    "        f\"한국 {target} 시장 규모 성장률 활동금액\",\n",
+    "        f\"{target} 정부 예산 신규 사업 우주청 2025 계획\",\n",
+    "        f\"{target} 수요 조달 활용서비스 재난 기상 농업\",\n",
+    "        f\"{target} 경쟁 진입장벽 국내 기업 동향\",\n",
+    "    ]\n",
+    "\n",
+    "    docs: List[Document] = []\n",
+    "    for q in queries:\n",
+    "        try:\n",
+    "            docs.extend(retriever.get_relevant_documents(q))\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "\n",
+    "    # 중복 제거 (파일명 + 본문 일부 해시)\n",
+    "    seen, uniq = set(), []\n",
+    "    for d in docs:\n",
+    "        src = d.metadata.get(\"source\") or \"\"\n",
+    "        key = (src, hash(d.page_content[:200]))\n",
+    "        if key not in seen:\n",
+    "            uniq.append(d)\n",
+    "            seen.add(key)\n",
+    "    uniq = uniq[:topk_each]\n",
+    "\n",
+    "    blocks = []\n",
+    "    for d in uniq:\n",
+    "        src = d.metadata.get(\"source\") or \"\"\n",
+    "        text = d.page_content.strip().replace(\"\\n\", \" \")\n",
+    "        blocks.append(f\"[{src}] {text}\")\n",
+    "    return \"\\n\\n\".join(blocks)\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# JSON 파싱 유틸\n",
+    "# ----------------------------------------------------------\n",
+    "# - LLM의 출력에서 JSON 블록만 추출해 Python dict로 변환\n",
+    "# ==========================================================\n",
+    "def _extract_json(text: str) -> Dict[str, Any]:\n",
+    "    if not text:\n",
+    "        return {}\n",
+    "    s = text.strip()\n",
+    "    m = re.search(r\"```(?:json)?\\s*(.*?)\\s*```\", s, flags=re.DOTALL)\n",
+    "    if m:\n",
+    "        s = m.group(1).strip()\n",
+    "    b = re.search(r\"\\{.*\\}\", s, flags=re.DOTALL)\n",
+    "    if b:\n",
+    "        s = b.group(0)\n",
+    "    try:\n",
+    "        return json.loads(s)\n",
+    "    except Exception:\n",
+    "        return {}\n",
+    "\n",
+    "\n",
+    "# ==========================================================\n",
+    "# 시장성 평가 에이전트\n",
+    "# ----------------------------------------------------------\n",
+    "# - RAG 기반으로 시장성 점수카드를 생성\n",
+    "# - state[\"startup_name\"]을 입력받아 평가 JSON 반환\n",
+    "# ==========================================================\n",
     "def market_eval_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"민주 담당: 시장 성장성, 수요 분석\"\"\"\n",
+    "    \"\"\"PDF 기반 RAG로 시장성 평가 수행\"\"\"\n",
     "\n",
-    "    company_name = state[\"startup_name\"]\n",
-    "    state[\"market_analysis\"] = f\"{company_name}의 시장 분석 결과 (민주 담당)\"\n",
+    "    target = state.get(\"startup_name\") or \"저궤도 위성\"\n",
+    "    context = _gather_context(target)\n",
     "\n",
+    "    SYSTEM_PROMPT = (\n",
+    "        \"당신은 한국 우주(위성) 산업의 시장평가 전문 애널리스트입니다. \"\n",
+    "        \"정부·산업 리포트를 근거로 ‘시장성 평가 점수카드(JSON)’를 작성하십시오.\\n\\n\"\n",
+    "        \"평가 원칙:\\n\"\n",
+    "        \"1. 모든 평가는 객관적 근거 기반으로 작성\\n\"\n",
+    "        \"2. 수치·경향은 명확히 기술하고 출처(파일명) 명시\\n\"\n",
+    "        \"3. 항목별 점수는 0~100 범위로 부여\\n\"\n",
+    "        \"4. 최종 출력은 완전한 JSON이어야 함\"\n",
+    "    )\n",
+    "\n",
+    "    USER_PROMPT = f\"\"\"\n",
+    "[분석 대상]\n",
+    "세그먼트: {target}\n",
+    "\n",
+    "[컨텍스트]\n",
+    "{context}\n",
+    "\n",
+    "[출력 형식(JSON 예시)]\n",
+    "{{\n",
+    "  \"target\": \"{target}\",\n",
+    "  \"geo\": \"KR\",\n",
+    "  \"scores\": {{\n",
+    "    \"market_size\": 0-100,\n",
+    "    \"growth\": 0-100,\n",
+    "    \"demand_signals\": 0-100,\n",
+    "    \"entry_barriers\": 0-100,\n",
+    "    \"policy_budget_tailwind\": 0-100,\n",
+    "    \"competition_intensity\": 0-100,\n",
+    "    \"gtm_feasibility\": 0-100\n",
+    "  }},\n",
+    "  \"total\": 0-100,\n",
+    "  \"band\": \"Invest|Watch|Hold\",\n",
+    "  \"rationale\": \"핵심 요약\",\n",
+    "  \"key_evidence\": [{{\"claim\": \"string\", \"source\": \"filename\"}}],\n",
+    "  \"risks\": [\"string\"],\n",
+    "  \"assumptions\": [\"string\"],\n",
+    "  \"data_freshness\": \"as of YYYY-MM-DD\"\n",
+    "}}\n",
+    "※ 반드시 유효한 JSON만 반환하십시오.\n",
+    "\"\"\"\n",
+    "\n",
+    "    llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
+    "    result = llm.invoke(\n",
+    "        [\n",
+    "            {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+    "            {\"role\": \"user\", \"content\": USER_PROMPT},\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    data = _extract_json(getattr(result, \"content\", \"\"))\n",
+    "\n",
+    "    # JSON 파싱 실패 시 기본값 적용\n",
+    "    if not isinstance(data, dict) or \"scores\" not in data:\n",
+    "        data = {\n",
+    "            \"target\": target,\n",
+    "            \"geo\": \"KR\",\n",
+    "            \"scores\": {k: 55 for k in WEIGHTS},\n",
+    "            \"rationale\": \"기본값 적용(LLM 파싱 실패)\",\n",
+    "            \"key_evidence\": [],\n",
+    "            \"risks\": [],\n",
+    "            \"assumptions\": [],\n",
+    "        }\n",
+    "\n",
+    "    # 점수 보정 및 총점 계산\n",
+    "    for k in WEIGHTS:\n",
+    "        data[\"scores\"][k] = float(data[\"scores\"].get(k, 55))\n",
+    "\n",
+    "    total = _total_score(data[\"scores\"])\n",
+    "    data[\"total\"] = total\n",
+    "    data[\"band\"] = _band(total)\n",
+    "    data[\"data_freshness\"] = f\"as of {datetime.now().date()}\"\n",
+    "\n",
+    "    # 결과 저장\n",
+    "    state[\"market_analysis\"] = json.dumps(data, ensure_ascii=False, indent=2)\n",
+    "    print(f\"[시장성 평가 완료] {target} → 총점 {total}점 / 밴드 {data['band']}\")\n",
     "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d37cbe33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = {\n",
+    "    \"startup_name\": \"저궤도 위성\",\n",
+    "    \"startup_info\": {},\n",
+    "    \"tech_summary\": \"\",\n",
+    "    \"market_analysis\": \"\",\n",
+    "    \"investment_decision\": \"\",\n",
+    "    \"report\": \"\",\n",
+    "    \"iteration_count\": 0\n",
+    "}\n",
+    "\n",
+    "state = market_eval_agent(state)\n",
+    "print(state[\"market_analysis\"])"
    ]
   },
   {
