jupyter_notebook 수정

--- a/startup-agent.ipynb
+++ b/startup-agent.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b568fe99",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,9 @@
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.chains import RetrievalQA"
+    "from langchain.chains import RetrievalQA\n",
+    "\n",
+    "from decision_module import investment_decision_agent"
    ]
   },
   {
@@ -96,13 +98,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ====== AgentState (업데이트된 스키마) ======\n",
     "class AgentState(TypedDict):\n",
     "    startup_name: str\n",
     "    startup_info: dict\n",
     "    tech_summary: str\n",
     "    market_analysis: str\n",
-    "    investment_decision: str\n",
-    "    report: str\n",
+    "    investment_decision: int     # 투자=1, 비투자=0\n",
+    "    decision_reason: str         # 판단 근거 요약 문자열\n",
+    "    report: str                  # 상세 리포트\n",
     "    iteration_count: int"
    ]
   },
@@ -205,74 +209,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def investment_decision_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"경남 담당: 투자자 인사이트 분석 + Scorecard Method 기반 투자 판단\"\"\"\n",
+    "# def investment_decision_agent(state: AgentState) -> AgentState:\n",
+    "#     \"\"\"경남 담당: 투자자 인사이트 분석 + Scorecard Method 기반 투자 판단\"\"\"\n",
     "\n",
-    "    company_name = state[\"startup_name\"]\n",
-    "    tech_summary = state[\"tech_summary\"]\n",
-    "    market_analysis = state[\"market_analysis\"]\n",
+    "#     company_name = state[\"startup_name\"]\n",
+    "#     tech_summary = state[\"tech_summary\"]\n",
+    "#     market_analysis = state[\"market_analysis\"]\n",
     "\n",
-    "    llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
+    "#     llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
     "\n",
-    "    combined_prompt = f\"\"\"\n",
-    "    당신은 세계적인 벤처캐피탈리스트입니다.\n",
+    "#     combined_prompt = f\"\"\"\n",
+    "#     당신은 세계적인 벤처캐피탈리스트입니다.\n",
     "    \n",
-    "    회사: {company_name}\n",
-    "    기술 분석: {tech_summary}\n",
-    "    시장 분석: {market_analysis}\n",
+    "#     회사: {company_name}\n",
+    "#     기술 분석: {tech_summary}\n",
+    "#     시장 분석: {market_analysis}\n",
     "    \n",
-    "    ## Part 1: 투자자 인사이트\n",
-    "    다음 관점에서 분석하세요:\n",
-    "    1. 비전과 시장 타이밍\n",
-    "    2. 팀의 실행력 가능성\n",
-    "    3. 스케일업 잠재력\n",
-    "    4. 경쟁 우위 지속가능성\n",
+    "#     ## Part 1: 투자자 인사이트\n",
+    "#     다음 관점에서 분석하세요:\n",
+    "#     1. 비전과 시장 타이밍\n",
+    "#     2. 팀의 실행력 가능성\n",
+    "#     3. 스케일업 잠재력\n",
+    "#     4. 경쟁 우위 지속가능성\n",
     "    \n",
-    "    ## Part 2: Scorecard Method 평가\n",
-    "    각 항목을 50-150% 척도로 평가:\n",
-    "    - 제품/기술: 15-20%\n",
-    "    - 시장 기회: 20-25%\n",
-    "    - 팀: 25-30%\n",
-    "    - 경쟁환경: 10-15%\n",
+    "#     ## Part 2: Scorecard Method 평가\n",
+    "#     각 항목을 50-150% 척도로 평가:\n",
+    "#     - 제품/기술: 15-20%\n",
+    "#     - 시장 기회: 20-25%\n",
+    "#     - 팀: 25-30%\n",
+    "#     - 경쟁환경: 10-15%\n",
     "    \n",
-    "    형식:\n",
-    "    [투자자 인사이트]\n",
-    "    - 비전과 타이밍: ...\n",
-    "    - 실행력: ...\n",
-    "    - 스케일업: ...\n",
-    "    - 경쟁우위: ...\n",
+    "#     형식:\n",
+    "#     [투자자 인사이트]\n",
+    "#     - 비전과 타이밍: ...\n",
+    "#     - 실행력: ...\n",
+    "#     - 스케일업: ...\n",
+    "#     - 경쟁우위: ...\n",
     "    \n",
-    "    [Scorecard 평가]\n",
-    "    기술: X%\n",
-    "    시장: Y%\n",
-    "    팀: Z%\n",
-    "    경쟁: W%\n",
+    "#     [Scorecard 평가]\n",
+    "#     기술: X%\n",
+    "#     시장: Y%\n",
+    "#     팀: Z%\n",
+    "#     경쟁: W%\n",
     "    \n",
-    "    [최종 결론]\n",
-    "    invest 또는 hold\n",
-    "    \"\"\"\n",
+    "#     [최종 결론]\n",
+    "#     invest 또는 hold\n",
+    "#     \"\"\"\n",
     "\n",
-    "    result = llm.invoke(combined_prompt)\n",
-    "    evaluation_text = result.content\n",
+    "#     result = llm.invoke(combined_prompt)\n",
+    "#     evaluation_text = result.content\n",
     "\n",
-    "    if \"invest\" in evaluation_text.lower() and \"hold\" not in evaluation_text.lower():\n",
-    "        state[\"investment_decision\"] = \"invest\"\n",
-    "    else:\n",
-    "        state[\"investment_decision\"] = \"hold\"\n",
+    "#     if \"invest\" in evaluation_text.lower() and \"hold\" not in evaluation_text.lower():\n",
+    "#         state[\"investment_decision\"] = \"invest\"\n",
+    "#     else:\n",
+    "#         state[\"investment_decision\"] = \"hold\"\n",
     "\n",
-    "    state[\"iteration_count\"] = state.get(\"iteration_count\", 0) + 1\n",
+    "#     state[\"iteration_count\"] = state.get(\"iteration_count\", 0) + 1\n",
     "\n",
-    "    return state\n",
+    "#     return state\n",
     "\n",
     "\n",
-    "# %%\n",
-    "def should_continue(state: AgentState) -> str:\n",
-    "    \"\"\"조건 분기\"\"\"\n",
-    "    if state[\"investment_decision\"] == \"invest\":\n",
-    "        return \"report_writer\"\n",
-    "    elif state[\"iteration_count\"] >= 3:\n",
-    "        return \"report_writer\"\n",
-    "    return \"startup_search\""
+    "# # %%\n",
+    "# def should_continue(state: AgentState) -> str:\n",
+    "#     \"\"\"조건 분기\"\"\"\n",
+    "#     if state[\"investment_decision\"] == \"invest\":\n",
+    "#         return \"report_writer\"\n",
+    "#     elif state[\"iteration_count\"] >= 3:\n",
+    "#         return \"report_writer\"\n",
+    "#     return \"startup_search\""
    ]
   },
   {
