--- a/startup-agent.ipynb
+++ b/startup-agent.ipynb
@@ -101,7 +101,8 @@
     "    startup_info: dict\n",
     "    tech_summary: str\n",
     "    market_analysis: str\n",
-    "    investment_decision: str\n",
+    "    investment_decision: int  # 투자=1, 비투자=0\n",  
+    "    decision_reason: str  # 상세 리포트\n",
     "    report: str\n",
     "    iteration_count: int"
    ]
