--- a/startup-agent.ipynb
+++ b/startup-agent.ipynb
@@ -88,6 +88,13 @@
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.chains import RetrievalQA\n",
     "\n",
+    "# 민주 모듈\n",
+    "from market_eval_agent import market_eval_agent\n",
+    "\n",
+    "# 승연 모듈\n",
+    "from tech_team_agent import tech_team_summary\n",
+    "\n",
+    "# 경남 모듈\n",
     "from decision_module import investment_decision_agent"
    ]
   },
@@ -162,12 +169,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tech_summary_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"승연 담당: 기술력 핵심 요약\"\"\"\n",
+    "# def tech_summary_agent(state: AgentState) -> AgentState:\n",
+    "#     \"\"\"승연 담당: 기술력 핵심 요약\"\"\"\n",
     "\n",
-    "    state[\"tech_summary\"] = f\"{company_name}의 기술 분석 결과 (승연 담당)\"\n",
+    "#     state[\"tech_summary\"] = f\"{company_name}의 기술 분석 결과 (승연 담당)\"\n",
     "\n",
-    "    return state"
+    "#     return state"
    ]
   },
   {
@@ -185,13 +192,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def market_eval_agent(state: AgentState) -> AgentState:\n",
-    "    \"\"\"민주 담당: 시장 성장성, 수요 분석\"\"\"\n",
+    "# def market_eval_agent(state: AgentState) -> AgentState:\n",
+    "#     \"\"\"민주 담당: 시장 성장성, 수요 분석\"\"\"\n",
     "\n",
-    "    company_name = state[\"startup_name\"]\n",
-    "    state[\"market_analysis\"] = f\"{company_name}의 시장 분석 결과 (민주 담당)\"\n",
+    "#     company_name = state[\"startup_name\"]\n",
+    "#     state[\"market_analysis\"] = f\"{company_name}의 시장 분석 결과 (민주 담당)\"\n",
     "\n",
-    "    return state"
+    "#     return state"
    ]
   },
   {
@@ -380,13 +387,17 @@
     "def create_workflow():\n",
     "    graph = StateGraph(AgentState)\n",
     "\n",
-    "    graph.add_node(\"startup_search\", startup_search_agent)\n",
-    "    graph.add_node(\"tech_summary\", tech_summary_agent)\n",
-    "    graph.add_node(\"market_eval\", market_eval_agent)\n",
-    "    graph.add_node(\"investment_decision\", investment_decision_agent)\n",
-    "    graph.add_node(\"report_writer\", report_writer_agent)\n",
+    "    graph.add_node(\"startup_search\", startup_search_agent) # 현준, 미완\n",
+    "    \n",
+    "    graph.add_node(\"tech_summary\", tech_team_summary) # 승연, 완\n",
+    "    \n",
+    "    graph.add_node(\"market_eval\", market_eval_agent) # 민주, 완\n",
+    "    \n",
+    "    graph.add_node(\"investment_decision\", investment_decision_agent) # 경남, 완\n",
+    "    \n",
+    "    graph.add_node(\"report_writer\", report_writer_agent) # 승연, 미완\n",
     "\n",
-    "    graph.set_entry_point(\"startup_search\")\n",
+    "    graph.set_entry_point(\"startup_search\") # 현준, 미완\n",
     "\n",
     "    graph.add_edge(\"startup_search\", \"tech_summary\")\n",
     "    graph.add_edge(\"tech_summary\", \"market_eval\")\n",
