--- a/startup-agent.ipynb
+++ b/startup-agent.ipynb
@@ -111,9 +111,9 @@
     "    startup_info: dict\n",
     "    tech_summary: str\n",
     "    market_analysis: str\n",
-    "    investment_decision: int     # 투자=1, 비투자=0\n",
-    "    decision_reason: str         # 판단 근거 요약 문자열\n",
-    "    report: str                  # 상세 리포트\n",
+    "    investment_decision: int  # 투자=1, 비투자=0\n",
+    "    decision_reason: str  # 판단 근거 요약 문자열\n",
+    "    report: str  # 상세 리포트\n",
     "    iteration_count: int"
    ]
   },
@@ -227,38 +227,38 @@
     "\n",
     "#     combined_prompt = f\"\"\"\n",
     "#     당신은 세계적인 벤처캐피탈리스트입니다.\n",
-    "    \n",
+    "\n",
     "#     회사: {company_name}\n",
     "#     기술 분석: {tech_summary}\n",
     "#     시장 분석: {market_analysis}\n",
-    "    \n",
+    "\n",
     "#     ## Part 1: 투자자 인사이트\n",
     "#     다음 관점에서 분석하세요:\n",
     "#     1. 비전과 시장 타이밍\n",
     "#     2. 팀의 실행력 가능성\n",
     "#     3. 스케일업 잠재력\n",
     "#     4. 경쟁 우위 지속가능성\n",
-    "    \n",
+    "\n",
     "#     ## Part 2: Scorecard Method 평가\n",
     "#     각 항목을 50-150% 척도로 평가:\n",
     "#     - 제품/기술: 15-20%\n",
     "#     - 시장 기회: 20-25%\n",
     "#     - 팀: 25-30%\n",
     "#     - 경쟁환경: 10-15%\n",
-    "    \n",
+    "\n",
     "#     형식:\n",
     "#     [투자자 인사이트]\n",
     "#     - 비전과 타이밍: ...\n",
     "#     - 실행력: ...\n",
     "#     - 스케일업: ...\n",
     "#     - 경쟁우위: ...\n",
-    "    \n",
+    "\n",
     "#     [Scorecard 평가]\n",
     "#     기술: X%\n",
     "#     시장: Y%\n",
     "#     팀: Z%\n",
     "#     경쟁: W%\n",
-    "    \n",
+    "\n",
     "#     [최종 결론]\n",
     "#     invest 또는 hold\n",
     "#     \"\"\"\n",
@@ -387,17 +387,17 @@
     "def create_workflow():\n",
     "    graph = StateGraph(AgentState)\n",
     "\n",
-    "    graph.add_node(\"startup_search\", startup_search_agent) # 현준, 미완\n",
-    "    \n",
-    "    graph.add_node(\"tech_summary\", tech_team_summary) # 승연, 완\n",
-    "    \n",
-    "    graph.add_node(\"market_eval\", market_eval_agent) # 민주, 완\n",
-    "    \n",
-    "    graph.add_node(\"investment_decision\", investment_decision_agent) # 경남, 완\n",
-    "    \n",
-    "    graph.add_node(\"report_writer\", report_writer_agent) # 승연, 미완\n",
+    "    graph.add_node(\"startup_search\", startup_search_agent)  # 현준, 미완\n",
     "\n",
-    "    graph.set_entry_point(\"startup_search\") # 현준, 미완\n",
+    "    graph.add_node(\"tech_summary\", tech_team_summary)  # 승연, 완\n",
+    "\n",
+    "    graph.add_node(\"market_eval\", market_eval_agent)  # 민주, 완\n",
+    "\n",
+    "    graph.add_node(\"investment_decision\", investment_decision_agent)  # 경남, 완\n",
+    "\n",
+    "    graph.add_node(\"report_writer\", report_writer_agent)  # 승연, 미완\n",
+    "\n",
+    "    graph.set_entry_point(\"startup_search\")  # 현준, 미완\n",
     "\n",
     "    graph.add_edge(\"startup_search\", \"tech_summary\")\n",
     "    graph.add_edge(\"tech_summary\", \"market_eval\")\n",
@@ -412,6 +412,65 @@
     "    graph.set_finish_point(\"report_writer\")\n",
     "\n",
     "    return graph.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "173c2e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import StateGraph, START, END\n",
+    "\n",
+    "\n",
+    "def should_continue(state: AgentState) -> str:\n",
+    "    \"\"\"조건 분기\"\"\"\n",
+    "    if state[\"investment_decision\"] == \"invest\":\n",
+    "        return \"report_writer\"\n",
+    "    elif state[\"iteration_count\"] >= 3:\n",
+    "        return \"report_writer\"\n",
+    "    return \"startup_search\"\n",
+    "\n",
+    "\n",
+    "graph = StateGraph(AgentState)\n",
+    "\n",
+    "# 노드 등록\n",
+    "graph.add_node(\"startup_search\", startup_search_agent)\n",
+    "graph.add_node(\"tech_team_summary\", tech_team_summary)\n",
+    "graph.add_node(\"market_eval\", market_eval_agent)\n",
+    "graph.add_node(\"investment_decision\", investment_decision_agent)\n",
+    "graph.add_node(\"report_writer\", report_writer_agent)\n",
+    "\n",
+    "# 시작점 설정\n",
+    "graph.set_entry_point(\"startup_search\")\n",
+    "\n",
+    "# 병렬 구조 설정\n",
+    "# startup_search 이후 두 노드가 병렬로 실행되도록 지정\n",
+    "graph.add_conditional_edges(\n",
+    "    \"startup_search\",\n",
+    "    lambda state: [\n",
+    "        \"tech_summary\",\n",
+    "        \"market_analysis\",\n",
+    "    ],  # 병렬 실행 대상 노드 리스트 반환\n",
+    "    {\"tech_summary\": \"tech_summary\", \"market_analysis\": \"market_analysis\"},\n",
+    ")\n",
+    "\n",
+    "# 두 병렬 노드가 끝난 후 investment_decision으로 converge\n",
+    "graph.add_edge(\"tech_summary\", \"investment_decision\")\n",
+    "graph.add_edge(\"market_analysis\", \"investment_decision\")\n",
+    "\n",
+    "# 판단 이후 보고서 작성\n",
+    "graph.add_conditional_edges(\n",
+    "    \"investment_decision\",\n",
+    "    should_continue,\n",
+    "    {\"report_writer\": \"report_writer\", \"startup_search\": \"startup_search\"},\n",
+    ")\n",
+    "\n",
+    "# 종료점 설정\n",
+    "graph.set_finish_point(\"report_writer\")\n",
+    "\n",
+    "graph.compile()"
    ]
   }
  ],
